# obstacle_avoidance_go2goal

./: README.md
src/obstacle_avoidance_go2goal/: CMakeLists.txt  package.xml
src/obstacle_avoidance_go2goal/launch/: simulation_launch.py
src/obstacle_avoidance_go2goal/obstacle_avoidance_go2goal/: go_to_goal.py  goal_publisher.py  lidar_reader.py  motion_controller.py  obstacle_avoidance.py  robot_interface.py
src/obstacle_avoidance_go2goal/world/: .turtlebot3_burger.wbproj  turtlebot3_burger.wbt
